--- a/test.html
+++ b/test.html
@@ -21,6 +21,7 @@
 		rel="stylesheet">
 </head>
 
+
 <body>
 	<div class="layout">
 		<section class="intro">
@@ -33,8 +34,8 @@
 						title="SLUT FOR BUTT by Roman Darkholme">
 				</div>
 			</div>
-			<div id="sticker-book" class="sticker-book full-size">
 
+			<div id="sticker-book" class="sticker-book full-size">
 
 				<div class="sticker-wrapper terri">
 					<div class="sticker">
@@ -1381,3 +1382,5 @@
 </body>
 
 </html>
+
+test
