--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://linktr.ee/slutforbutt/" />
+<!-- <meta http-equiv="refresh" content="0; url=https://linktr.ee/slutforbutt/" /> -->
