--- a/music/index.html
+++ b/music/index.html
@@ -1,1 +1,11 @@
-<meta http-equiv="refresh" content="0; url=#music">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=./#music">
+    <title>Redirecting...</title>
+</head>
+<body>
+    <p>If you are not redirected automatically, <a href="#music">click here</a>.</p>
+</body>
+</html>
