--- a/music/index.html
+++ b/music/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=./#music">
+    <meta http-equiv="refresh" content="0; url=../#music">
     <title>Redirecting...</title>
 </head>
 <body>
