--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- <meta http-equiv="refresh" content="0; url=https://linktr.ee/slutforbutt/" /> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=https://linktr.ee/slutforbutt/" />
+    <title>Redirecting...</title>
+</head>
+<body>
+    <p>If you are not redirected automatically, <a href="https://linktr.ee/slutforbutt/">click here</a>.</p>
+</body>
+</html>
