--- a/live/index.html
+++ b/live/index.html
@@ -1,1 +1,11 @@
-<meta http-equiv="refresh" content="0; url=#live">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=../#live">
+    <title>Redirecting...</title>
+</head>
+<body>
+    <p>If you are not redirected automatically, <a href="../#live">click here</a>.</p>
+</body>
+</html>
