--- a/video/index.html
+++ b/video/index.html
@@ -1,1 +1,11 @@
-<meta http-equiv="refresh" content="0; url=#music">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=../#video">
+    <title>Redirecting...</title>
+</head>
+<body>
+    <p>If you are not redirected automatically, <a href="../#video">click here</a>.</p>
+</body>
+</html>
