sticker fixes and content reduction

--- a/test.html
+++ b/test.html
@@ -139,6 +139,7 @@
 				<div class="marquee carousel" data-speed="3">I'M 👀👑 4 MON⭐ 🍆</div>
 			</div>
 		</section>
+
 		<section id="live" class="portfolio live">
 			<!-- SLUT FOR BUTT LIVE -->
 			<div class="section-information grid">
@@ -151,6 +152,54 @@
 					</ul>
 				</div>
 			</div>
+
+			<div class="portfolio-column force-3-desktop">
+				<div class="portfolio-piece vertical" data-tags="live">
+					<div class="video-container vertical">
+						<iframe loading="lazy"
+							src="https://player.vimeo.com/video/937510559?mute=1&autoplay=0&loop=1&title=0&portrait=0&byline=0&speed=0"
+							frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"></iframe>
+					</div>
+					<div class="section-information grid">
+						<h2 class="title col-4">TRIXIE MOTEL: REVEAL TO STRIPPER</h2>
+						<div class="description col-2">
+							<p>performing "Fun To Fuck" at the TRIXIE MOTEL</p>
+							<ul class="tags">
+								<li>live</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="portfolio-piece vertical" data-tags="live">
+					<div class="video-container vertical">
+						<iframe loading="lazy"
+							src="https://player.vimeo.com/video/926169919?mute=1&autoplay=0&loop=1&title=0&portrait=0&byline=0&speed=0"
+							frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"></iframe>
+					</div>
+					<div class="section-information grid">
+						<h2 class="title col-4">IM DATING A CELEBRITY</h2>
+						<div class="description col-2">
+							<p>TELL NO ONE!</p>
+							<ul class="tags">
+								<li>live</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				
+				<div class="portfolio-piece vertical" data-tags="live">
+					<div class="video-container vertical">
+						<iframe loading="lazy"
+							src="https://player.vimeo.com/video/532519625?mute=1&autoplay=0&loop=1&title=0&portrait=0&byline=0&speed=0"
+							frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"></iframe>
+					</div>
+					<div class="section-information grid">
+						<h2 class="title col-4">WHO IS ROMAN?</h2>
+					</div>
+				</div>
+			</div>
+
+
 			<!-- IKEA -->
 			<div class="ikea-wrapper">
 				<div class="box ikea">
@@ -200,22 +249,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="portfolio-piece vertical" data-tags="live">
-					<div class="video-container vertical">
-						<iframe loading="lazy"
-							src="https://player.vimeo.com/video/937510559?mute=1&autoplay=0&loop=1&title=0&portrait=0&byline=0&speed=0"
-							frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"></iframe>
-					</div>
-					<div class="section-information grid">
-						<h2 class="title col-4">TRIXIE MOTEL: REVEAL TO STRIPPER</h2>
-						<div class="description col-2">
-							<p>performing "Fun To Fuck" at the TRIXIE MOTEL</p>
-							<ul class="tags">
-								<li>live</li>
-							</ul>
-						</div>
-					</div>
-				</div>
+
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -232,22 +266,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="portfolio-piece vertical" data-tags="live">
-					<div class="video-container vertical">
-						<iframe loading="lazy"
-							src="https://player.vimeo.com/video/926169919?mute=1&autoplay=0&loop=1&title=0&portrait=0&byline=0&speed=0"
-							frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"></iframe>
-					</div>
-					<div class="section-information grid">
-						<h2 class="title col-4">IM DATING A CELEBRITY</h2>
-						<div class="description col-2">
-							<p>TELL NO ONE!</p>
-							<ul class="tags">
-								<li>live</li>
-							</ul>
-						</div>
-					</div>
-				</div>
+
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -290,16 +309,6 @@
 								<li>live</li>
 							</ul>
 						</div>
-					</div>
-				</div>
-				<div class="portfolio-piece vertical" data-tags="live">
-					<div class="video-container vertical">
-						<iframe loading="lazy"
-							src="https://player.vimeo.com/video/532519625?mute=1&autoplay=0&loop=1&title=0&portrait=0&byline=0&speed=0"
-							frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"></iframe>
-					</div>
-					<div class="section-information grid">
-						<h2 class="title col-4">WHO IS ROMAN?</h2>
 					</div>
 				</div>
 				<div class="portfolio-piece vertical" data-tags="live">
@@ -354,6 +363,7 @@
 						<h2 class="title col-4">A SHOW DAY IN 30 SECONDS</h2>
 					</div>
 				</div>
+				<!--
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -370,6 +380,8 @@
 						</div>
 					</div>
 				</div>
+				-->
+				<!--
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -386,6 +398,7 @@
 						</div>
 					</div>
 				</div>
+				-->
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -445,6 +458,7 @@
 						</div>
 					</div>
 				</div>
+				<!--
 				<div class="portfolio-piece horizontal" data-tags="live">
 					<div class="video-container horizontal">
 						<iframe loading="lazy"
@@ -461,6 +475,7 @@
 						</div>
 					</div>
 				</div>
+				-->
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -477,6 +492,7 @@
 						</div>
 					</div>
 				</div>
+				<!--
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -493,6 +509,8 @@
 						</div>
 					</div>
 				</div>
+				-->
+				<!--
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -509,6 +527,7 @@
 						</div>
 					</div>
 				</div>
+				-->
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -617,6 +636,7 @@
 						</div>
 					</div>
 				</div>
+				<!--
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -627,6 +647,7 @@
 						<h2 class="title col-4">"NICE TO MEET YA" AT THE STONEWALL INN</h2>
 					</div>
 				</div>
+				-->
 				<!-- END LIVE SECTION -->
 		</section>
 		<section id="music" class="portfolio music">
@@ -672,6 +693,7 @@
 						</div>
 					</div>
 				</div>
+				<!--
 				<div class="portfolio-piece vertical">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -685,6 +707,8 @@
 						</div>
 					</div>
 				</div>
+				-->
+				<!--
 				<div class="portfolio-piece vertical" data-tags="video, animation, Slut For Butt, commercial">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -704,6 +728,7 @@
 						</div>
 					</div>
 				</div>
+				-->
 				<div class="portfolio-piece vertical" data-tags="video, animation, social media,">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -714,6 +739,7 @@
 						<h2 class="title col-4">BEST OF THE WEEK: PROMO</h2>
 					</div>
 				</div>
+				<!--
 				<div class="portfolio-piece vertical" data-tags="video, music">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -731,6 +757,7 @@
 						</div>
 					</div>
 				</div>
+			-->
 				<div class="portfolio-piece vertical" data-tags="video, animation, how-to">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -818,6 +845,8 @@
 						</div>
 					</div>
 				</div>
+
+				<!--
 				<div class="portfolio-piece vertical" data-tags="video, music, model">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -837,6 +866,9 @@
 						</div>
 					</div>
 				</div>
+				-->
+
+
 				<div class="portfolio-piece vertical" data-tags="video, animation">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -854,6 +886,8 @@
 						</div>
 					</div>
 				</div>
+
+				<!--
 				<div class="portfolio-piece vertical" data-tags="video, animation, social media">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -864,6 +898,9 @@
 						<h2 class="title col-4">RUSH HOUR - INSTA PROMO</h2>
 					</div>
 				</div>
+				-->
+
+				<!--
 				<div class="portfolio-piece vertical" data-tags="video,">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -874,6 +911,9 @@
 						<h2 class="title col-4">ANNA NICOLE RELOADED!</h2>
 					</div>
 				</div>
+				-->
+
+
 				<div class="portfolio-piece vertical" data-tags="video, music">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -1017,6 +1057,8 @@
 						</div>
 					</div>
 				</div>
+
+				<!--
 				<div class="portfolio-piece vertical" data-tags="video, animation">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -1027,6 +1069,9 @@
 						<h2 class="title col-4">DSQUARED2 + CHRISTIAN OITA – VISUALIZER</h2>
 					</div>
 				</div>
+				-->
+
+
 				<div class="portfolio-piece vertical" data-tags="video, animation">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -1037,6 +1082,8 @@
 						<h2 class="title col-4">CHARLIE – MAKE EM' SQUIRTLE</h2>
 					</div>
 				</div>
+
+				<!--
 				<div class="portfolio-piece vertical" data-tags="video, commision, animation">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -1047,6 +1094,10 @@
 						<h2 class="title col-4">KNOCKOUT BRUNCH PROMO</h2>
 					</div>
 				</div>
+				-->
+
+
+
 				<div class="portfolio-piece vertical" data-tags="video, music">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -1082,6 +1133,8 @@
 						</div>
 					</div>
 				</div>
+
+				<!--
 				<div class="portfolio-piece vertical" data-tags="video, commission">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -1092,6 +1145,9 @@
 						<h2 class="title col-4">LINDA PARTY INVITE</h2>
 					</div>
 				</div>
+				-->
+
+
 				<div class="portfolio-piece vertical" data-tags="video, music, commission, animation, art direction">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -1282,8 +1338,8 @@
 			<div class="col-2">
 				<ul>
 					<li><a href="https://slutforbutt.myshopify.com/" target="_blank">Shop</a></li>
-					<li><a href="https://www.instagram.com/slutforbutt/" target="_blank">Instagram & Live</a></li>
-					<li><a href="https://open.spotify.com/artist/3QlrEZz6QQxnmYvQ3f4cmm" target="_blank">Music</a></li>
+					<li><a href="https://www.instagram.com/slutforbutt/" target="_blank">Instagram</a></li>
+					<li><a href="https://open.spotify.com/artist/3QlrEZz6QQxnmYvQ3f4cmm" target="_blank">Spotify</a></li>
 					<li><a href="https://www.tiktok.com/@romandarkholme" target="_blank">TikTok</a></li>
 					<li><a href="https://www.youtube.com/channel/UC-FbY2Tkp9YvI63PZuA_Dzw" target="_blank">YouTube</a>
 					</li>
