sticker fixes for safari

--- a/test.html
+++ b/test.html
@@ -56,6 +56,14 @@
 							src="images/stickers/EDWARD_sticker.png">
 					</div>
 				</div>
+
+				<div class="sticker-wrapper wendy">
+					<div class="sticker">
+						<img fetchPriority="high" alt="WENDY" draggable="false" src="images/stickers/WENDY_sticker.png">
+					</div>
+				</div>
+
+
 				<!--
 				<div class="sticker-wrapper">
 					<div class="sticker">
@@ -90,11 +98,7 @@
 					</div>
 				</div>
 
-				<div class="sticker-wrapper">
-					<div class="sticker">
-						<img fetchPriority="high" alt="WENDY" draggable="false" src="images/stickers/WENDY_sticker.png">
-					</div>
-				</div>
+
 				<div class="sticker-wrapper">
 					<div class="sticker">
 						<img fetchPriority="high" alt="WHITE CHICKS" draggable="false" src="images/stickers/WHITECHICKS_sticker.png">
