sticker fixes for safari

--- a/test.html
+++ b/test.html
@@ -1335,9 +1335,9 @@
 			</div>
 			<div class="col-3">
 				<h3 class="head">ROMAN DARKHOLME</h3>
-				<p>LOS ANGELES-BASED <span class="emoji">🌴</span> MUSICIAN AND PERFORMER <span class="emoji">❤️</span>
+				<p>LOS ANGELES & NYC BASED MUSICIAN AND PERFORMER <span class="emoji">❤️</span>
 				</p>
-				<p><span class="emoji">📧</span> contact@contact.com</p>
+				<p><span class="emoji">📧</span> <a href="mailto:romandarkholme@gmail.com">romandarkholme@gmail.com</a></p>
 			</div>
 			<div class="col-2">
 				<ul>
