add metadata and load main js file

--- a/test.html
+++ b/test.html
@@ -4,10 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="SLUT FOR BUTT | ROMAN DARKLHOME - MUSICIAN AND PERFORMER">
+	<meta name="description" content="LOS ANGELES & NYC BASED MUSICIAN AND PERFORMER">
 	<meta name="author" content="Roman Darkholme">
-	<title>SLUT FOR BUTT | ROMAN DARKLHOME - MUSICIAN AND PERFORMER</title>
+	<title>SLUT FOR BUTT by ROMAN DARKLHOME - MUSICIAN AND PERFORMER</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/masonry.css">
 	<link rel="stylesheet" href="css/marquee.css">
@@ -19,6 +18,20 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 		rel="stylesheet">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://slutforbutt.com/" />
+	<meta property="og:title" content="SLUT FOR BUTT by ROMAN DARKLHOME" />
+	<meta property="og:description" content="LOS ANGELES & NYC BASED MUSICIAN AND PERFORMER" />
+	<meta property="og:image" content="https://slutforbutt.com/images/logo.png" />
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta property="twitter:url" content="https://slutforbutt.com/" />
+	<meta property="twitter:title" content="SLUT FOR BUTT by ROMAN DARKLHOME" />
+	<meta property="twitter:description" content="LOS ANGELES & NYC BASED MUSICIAN AND PERFORMER" />
+	<meta property="twitter:image" content="https://slutforbutt.com/images/logo.png" />
 </head>
 
 <body>
@@ -56,14 +69,11 @@
 							src="images/stickers/EDWARD_sticker.png">
 					</div>
 				</div>
-
 				<div class="sticker-wrapper wendy">
 					<div class="sticker">
 						<img fetchPriority="high" alt="WENDY" draggable="false" src="images/stickers/WENDY_sticker.png">
 					</div>
 				</div>
-
-
 				<!--
 				<div class="sticker-wrapper">
 					<div class="sticker">
@@ -143,7 +153,6 @@
 				<div class="marquee carousel" data-speed="3">I'M 👀👑 4 MON⭐ 🍆</div>
 			</div>
 		</section>
-
 		<section id="live" class="portfolio live">
 			<!-- SLUT FOR BUTT LIVE -->
 			<div class="section-information grid">
@@ -156,7 +165,6 @@
 					</ul>
 				</div>
 			</div>
-
 			<div class="portfolio-column force-3-desktop">
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
@@ -190,7 +198,6 @@
 						</div>
 					</div>
 				</div>
-				
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -202,8 +209,6 @@
 					</div>
 				</div>
 			</div>
-
-
 			<!-- IKEA -->
 			<div class="ikea-wrapper">
 				<div class="box ikea">
@@ -253,7 +258,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -270,7 +274,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="portfolio-piece vertical" data-tags="live">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -849,7 +852,6 @@
 						</div>
 					</div>
 				</div>
-
 				<!--
 				<div class="portfolio-piece vertical" data-tags="video, music, model">
 					<div class="video-container vertical">
@@ -871,8 +873,6 @@
 					</div>
 				</div>
 				-->
-
-
 				<div class="portfolio-piece vertical" data-tags="video, animation">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -890,7 +890,6 @@
 						</div>
 					</div>
 				</div>
-
 				<!--
 				<div class="portfolio-piece vertical" data-tags="video, animation, social media">
 					<div class="video-container vertical">
@@ -903,7 +902,6 @@
 					</div>
 				</div>
 				-->
-
 				<!--
 				<div class="portfolio-piece vertical" data-tags="video,">
 					<div class="video-container vertical">
@@ -916,8 +914,6 @@
 					</div>
 				</div>
 				-->
-
-
 				<div class="portfolio-piece vertical" data-tags="video, music">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -1061,7 +1057,6 @@
 						</div>
 					</div>
 				</div>
-
 				<!--
 				<div class="portfolio-piece vertical" data-tags="video, animation">
 					<div class="video-container vertical">
@@ -1074,8 +1069,6 @@
 					</div>
 				</div>
 				-->
-
-
 				<div class="portfolio-piece vertical" data-tags="video, animation">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -1086,7 +1079,6 @@
 						<h2 class="title col-4">CHARLIE – MAKE EM' SQUIRTLE</h2>
 					</div>
 				</div>
-
 				<!--
 				<div class="portfolio-piece vertical" data-tags="video, commision, animation">
 					<div class="video-container vertical">
@@ -1099,9 +1091,6 @@
 					</div>
 				</div>
 				-->
-
-
-
 				<div class="portfolio-piece vertical" data-tags="video, music">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -1137,7 +1126,6 @@
 						</div>
 					</div>
 				</div>
-
 				<!--
 				<div class="portfolio-piece vertical" data-tags="video, commission">
 					<div class="video-container vertical">
@@ -1150,8 +1138,6 @@
 					</div>
 				</div>
 				-->
-
-
 				<div class="portfolio-piece vertical" data-tags="video, music, commission, animation, art direction">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -1337,13 +1323,15 @@
 				<h3 class="head">ROMAN DARKHOLME</h3>
 				<p>LOS ANGELES & NYC BASED MUSICIAN AND PERFORMER <span class="emoji">❤️</span>
 				</p>
-				<p><span class="emoji">📧</span> <a href="mailto:romandarkholme@gmail.com">romandarkholme@gmail.com</a></p>
+				<p><span class="emoji">📧</span> <a href="mailto:romandarkholme@gmail.com">romandarkholme@gmail.com</a>
+				</p>
 			</div>
 			<div class="col-2">
 				<ul>
 					<li><a href="https://slutforbutt.myshopify.com/" target="_blank">Shop</a></li>
 					<li><a href="https://www.instagram.com/slutforbutt/" target="_blank">Instagram</a></li>
-					<li><a href="https://open.spotify.com/artist/3QlrEZz6QQxnmYvQ3f4cmm" target="_blank">Spotify</a></li>
+					<li><a href="https://open.spotify.com/artist/3QlrEZz6QQxnmYvQ3f4cmm" target="_blank">Spotify</a>
+					</li>
 					<li><a href="https://www.tiktok.com/@romandarkholme" target="_blank">TikTok</a></li>
 					<li><a href="https://www.youtube.com/channel/UC-FbY2Tkp9YvI63PZuA_Dzw" target="_blank">YouTube</a>
 					</li>
@@ -1352,192 +1340,19 @@
 			</div>
 		</footer>
 	</div>
+	<script src="js/script.js"></script>
 	<script src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.js"></script>
 	<script src="https://player.vimeo.com/api/player.js"></script>
 	<script src="js/masonry.js"></script>
 	<script src="js/marquee.js"></script>
 	<script src="js/sticker.js"></script>
 	<script>
-		// SLUT FOR BUTT!
-		const SlutForButt = {
-
-			minLogoHeight: 150, // Define the minimum height for the logo
-			maxLogoHeight: 800, // Define the maximum height for the logo
-
-			fadeInSelector: '.portfolio-piece',
-			fadeInClass: 'fadeIn',
-			fadeDelay: 100,
-
-			fadeIn() {
-				/* FADE IN ELEMENT */
-				const elements = document.querySelectorAll(this.fadeInSelector);
-
-
-
-				// Create a new Intersection Observer
-				const observer = new IntersectionObserver((entries, observer) => {
-					entries.forEach((entry, index) => {
-
-						// Check if the element is intersecting with the viewport
-						if (entry.isIntersecting) {
-							// Calculate the delay based on the index of the element
-							const delay = index * this.fadeDelay; // Adjust the delay duration as desired
-
-							// Add a CSS class with the delay to initiate the fade-in effect
-							entry.target.style.transitionDelay = `${delay}ms`;
-							entry.target.classList.add(this.fadeInClass);
-
-							// Stop observing the element after it fades in once
-							observer.unobserve(entry.target);
-						}
-					});
-				});
-
-				// Start observing each element
-				elements.forEach(element => {
-					observer.observe(element);
-				});
-			},
-
-			init() {
-				// listener events
-				this.addClickListener();
-				this.addScrollListener();
-
-				// run things for the first time
-				this.handleScrollForHeader();
-				this.addSmoothScrollAnchor();
-
-				// logo things
-
-				// run it the first time
-				this.initMaxHeight();
-				this.setMaxHeight();
-
-				// Add event listener for window resize
-				window.addEventListener('resize', (event) => {
-					// Call the function again on resize
-					this.setMaxHeight();
-				});
-
-				// Add event listener for window scroll
-				window.addEventListener('scroll', (event) => {
-					// Call the function again on scroll
-					this.setMaxHeight();
-				});
-
-				this.fadeIn();
-			},
-
-			// Function to set the max height of the logo based on the height of #logo-area and scroll position
-
-			initMaxHeight() {
-				var logoArea = document.getElementById('logo-area');
-				logoArea.style.paddingBottom = this.minLogoHeight + 'px';
-			},
-
-			setMaxHeight() {
-
-				var logoArea = document.getElementById('logo-area');
-				var logoWrapper = document.getElementById('logo-wrapper');
-				var logo = document.getElementById('logo');
-
-				var logoAreaHeight = logoArea.clientHeight;
-				var scrollY = window.scrollY || window.pageYOffset;
-
-				var availableHeight = logoAreaHeight - scrollY;
-
-
-
-				// calculate max height
-				var maxHeight = Math.max(this.minLogoHeight, Math.min(this.maxLogoHeight, availableHeight));
-				logo.style.height = maxHeight + 'px';
-
-				// calculate top
-				let logoHeight = logo.offsetHeight;
-				var top = Math.max(0, (availableHeight - logoHeight) / 2);
-				logoWrapper.style.top = top + 'px';
-
-			},
-
-
-
-
-			addSmoothScrollAnchor() {
-				document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-					anchor.addEventListener('click', function (e) {
-						e.preventDefault();
-
-						document.querySelector(this.getAttribute('href')).scrollIntoView({
-							behavior: 'smooth'
-						});
-					});
-				});
-			},
-
-			addClickListener() {
-				this.addLogoClickListener();
-			},
-
-			addLogoClickListener() {
-				const scrollToTop = () => {
-					if (window.scrollY === 0) {
-						return;
-					}
-
-					setTimeout(function () {
-						window.scrollTo({
-							top: 0,
-							behavior: 'smooth'
-						});
-					}, 200);
-
-
-
-				};
-
-				const logo = document.getElementById('logo-wrapper');
-
-				// Click Event Listener
-				logo.addEventListener('click', (event) => {
-					event.preventDefault();
-					scrollToTop();
-				});
-
-				// Touch Event Listener
-				logo.addEventListener('touchstart', (event) => {
-					event.preventDefault();
-					scrollToTop();
-				}, { passive: true });
-			},
-
-			addScrollListener() {
-				window.addEventListener('scroll', () => {
-					this.handleScrollForHeader();
-				});
-			},
-
-			handleScrollForHeader() {
-				const logo = document.getElementById('header');
-				if (window.scrollY > 0) {
-					logo.classList.add('scrolled');
-				} else {
-					logo.classList.remove('scrolled');
-				}
-			}
-		};
-
-
-
 		// init
 		document.addEventListener("DOMContentLoaded", function () {
 			SlutForButt.init();
 			MasonryManager.init();
 			MarqueeManager.init();
-
-
 		});
-
 	</script>
 </body>
 
