reposition stickers and adjust copy

--- a/test.html
+++ b/test.html
@@ -687,6 +687,30 @@
 			</div>
 			<!-- VIDEO SECTION-->
 			<div class="portfolio-column">
+
+				<div class="portfolio-piece horizontal" data-tags="video, commission, commercial, music">
+					<div class="video-container horizontal">
+						<iframe loading="lazy"
+							src="https://player.vimeo.com/video/926444815?mute=1&autoplay=0&loop=1&title=0&portrait=0&byline=0&speed=0"
+							frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"></iframe>
+					</div>
+					<div class="section-information grid">
+						<h2 class="title col-4">H&M + MOSCHINO COMMERCIAL</h2>
+						<div class="description col-2">
+							<p>Commissioned work! The commercial I animated for H&M + Moschino feat. my song "more than
+								your name 1985"</p>
+							<ul class="tags">
+								<li>video</li>
+								<li>commission</li>
+								<li>commercial</li>
+								<li>music</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+
+
 				<div class="portfolio-piece vertical">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -783,26 +807,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="portfolio-piece horizontal" data-tags="video, commission, commercial, music">
-					<div class="video-container horizontal">
-						<iframe loading="lazy"
-							src="https://player.vimeo.com/video/926444815?mute=1&autoplay=0&loop=1&title=0&portrait=0&byline=0&speed=0"
-							frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"></iframe>
-					</div>
-					<div class="section-information grid">
-						<h2 class="title col-4">H&M + MOSCHINO COMMERCIAL</h2>
-						<div class="description col-2">
-							<p>Commissioned work! The commercial I animated for H&M + Moschino feat. my song "more than
-								your name 1985"</p>
-							<ul class="tags">
-								<li>video</li>
-								<li>commission</li>
-								<li>commercial</li>
-								<li>music</li>
-							</ul>
-						</div>
-					</div>
-				</div>
+
 				<div class="portfolio-piece vertical" data-tags="video, visualizer">
 					<div class="video-container vertical">
 						<iframe loading="lazy"
@@ -1217,7 +1222,7 @@
 			<div class="section-information grid">
 				<h2 class="title col-4">PHOTOS</h2>
 				<div class="description col-2">
-					<p>Photos by yours truly.</p>
+					<p>Photo art direction, retouching and composite by yours truly.</p>
 					<ul class="tags">
 						<li>Retouching</li>
 						<li>Composites</li>
