add more metatags

--- a/test.html
+++ b/test.html
@@ -3,10 +3,12 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="Content-Language" content="en-US">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="canonical" href="https://slutforbutt.com/">
 	<meta name="description" content="LOS ANGELES & NYC BASED MUSICIAN AND PERFORMER">
 	<meta name="author" content="Roman Darkholme">
-	<title>SLUT FOR BUTT by ROMAN DARKLHOME - MUSICIAN AND PERFORMER</title>
+	<title>SLUT FOR BUTT by ROMAN DARKLHOME</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/masonry.css">
 	<link rel="stylesheet" href="css/marquee.css">
